Changed lovable to kira4i brand

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Kira4I</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Kira4I builds on-device AI Agent for your every digital needs." />
+    <meta name="author" content="Kira4I Team" />
 
-    <meta property="og:title" content="neon-narrative-ai" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Kira4I | Artificial Intelligence" />
+    <meta property="og:description" content="Kira4I builds on-device AI Agent for your every digital needs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://kira4i.com/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@itskira4i" />
+    <meta name="twitter:image" content="https://kira4i.com/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
